--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
-    "sqlite": "^5.1.1",
+    "sqlite3": "^5.1.6",
     "superset": "^2.0.1",
     "tsup": "^8.0.1",
     "tsx": "^4.5.0",
