--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "Ademir Giraldelli",
   "license": "MIT",
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.10.0",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "@fastify/cookie": "^9.2.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.3.1",
     "fastify": "^4.24.3",
     "knex": "^3.0.1",
