--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20.10.0",
+    "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.12.0",
     "@typescript-eslint/parser": "^6.12.0",
     "eslint": "^8.54.0",
     "sqlite3": "^5.1.6",
-    "superset": "^2.0.1",
+    "supertest": "^6.3.3",
     "tsup": "^8.0.1",
     "tsx": "^4.5.0",
     "typescript": "^5.3.2",
